add de visualisador activo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,19 @@
 {
     "liveServer.settings.port": 5501,
     "cSpell.words": [
-        "CINTA"
+        "barramenu",
+        "barramenua",
+        "barranav",
+        "barranava",
+        "CINTA",
+        "ctive",
+        "entrada",
+        "entradasegu",
+        "menuactivo",
+        "numeroval",
+        "observersegu",
+        "seguactivo",
+        "valorseguro",
+        "verbar"
     ]
 }
