--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "barramenua",
         "barranav",
         "barranava",
+        "boton",
         "CINTA",
         "ctive",
         "entrada",
