--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "barranav",
         "barranava",
         "boton",
+        "CARGANDO",
         "CINTA",
         "ctive",
         "entrada",
@@ -14,6 +15,9 @@
         "menuactivo",
         "numeroval",
         "observersegu",
+        "PORTAFOLIO",
+        "scrollcontra",
+        "scrolldos",
         "seguactivo",
         "valorseguro",
         "verbar"
