--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,20 +6,27 @@
         "barramenua",
         "barranav",
         "barranava",
+        "BIENVENIDO",
         "boton",
         "CARGANDO",
         "CINTA",
+        "CREATIVAS",
+        "CREATIVO",
         "ctive",
+        "DESARROLLO",
         "entrada",
         "entradasegu",
+        "HAGAMOS",
         "menuactivo",
         "numeroval",
         "observersegu",
         "PORTAFOLIO",
+        "REALIDAD",
         "scrollcontra",
         "scrolldos",
         "scrollinicio",
         "seguactivo",
+        "SOLUCIONES",
         "valorseguro",
         "verbar"
     ]
