add nuevo estilo home

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,12 +10,16 @@
         "boton",
         "CARGANDO",
         "CINTA",
+        "conten",
         "CREATIVAS",
         "CREATIVO",
         "ctive",
         "DESARROLLO",
         "entrada",
         "entradasegu",
+        "flotante",
+        "fondo",
+        "grilla",
         "HAGAMOS",
         "menuactivo",
         "numeroval",
@@ -26,6 +30,7 @@
         "scrolldos",
         "scrollinicio",
         "seguactivo",
+        "setion",
         "SOLUCIONES",
         "valorseguro",
         "verbar"
