add de section plus

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,11 +9,13 @@
         "BIENVENIDO",
         "boton",
         "CARGANDO",
+        "CINCO",
         "CINTA",
         "conten",
         "CREATIVAS",
         "CREATIVO",
         "ctive",
+        "CUATRO",
         "DESARROLLO",
         "entrada",
         "entradasegu",
@@ -21,6 +23,7 @@
         "fondo",
         "grilla",
         "HAGAMOS",
+        "lista",
         "menuactivo",
         "numeroval",
         "observersegu",
@@ -30,6 +33,7 @@
         "scrolldos",
         "scrollinicio",
         "seguactivo",
+        "servicios",
         "setion",
         "SOLUCIONES",
         "valorseguro",
