--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "flotante",
         "fondo",
         "grilla",
+        "gsap",
         "HAGAMOS",
         "lista",
         "menuactivo",
@@ -40,6 +41,7 @@
         "SOLUCIONES",
         "valorseguro",
         "verbar",
+        "wapp",
         "wavex"
     ]
 }
