add figuras glass geometric en bandera

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,16 @@
         "barranava",
         "BIENVENIDO",
         "boton",
+        "camerados",
+        "cameratres",
+        "camerauno",
         "CARGANDO",
         "CINCO",
         "CINTA",
+        "contdos",
+        "contdtres",
         "conten",
+        "contuno",
         "CREATIVAS",
         "CREATIVO",
         "ctive",
@@ -20,18 +26,32 @@
         "DESARROLLO",
         "entrada",
         "entradasegu",
+        "figura",
+        "figurados",
+        "figuratres",
+        "figureuno",
         "flotante",
         "fondo",
+        "geometrydos",
+        "geometryuno",
         "grilla",
         "gsap",
         "HAGAMOS",
         "lista",
+        "materialdos",
+        "materialuno",
         "menuactivo",
         "multipler",
         "numeroval",
         "observersegu",
         "PORTAFOLIO",
         "REALIDAD",
+        "rendererdos",
+        "renderertres",
+        "rendereruno",
+        "scenedos",
+        "scenetres",
+        "sceneuno",
         "scrollcontra",
         "scrolldos",
         "scrollinicio",
@@ -39,6 +59,7 @@
         "servicios",
         "setion",
         "SOLUCIONES",
+        "textureuno",
         "valorseguro",
         "verbar",
         "wapp",
