--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
         "grilla",
         "gsap",
         "HAGAMOS",
+        "lightuno",
         "lista",
         "materialdos",
         "materialuno",
