add scroll horizontal

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,12 +12,14 @@
         "camerados",
         "cameratres",
         "camerauno",
+        "capa",
         "CARGANDO",
         "CINCO",
         "CINTA",
         "contdos",
         "contdtres",
         "conten",
+        "contenedora",
         "contuno",
         "CREATIVAS",
         "CREATIVO",
@@ -45,6 +47,7 @@
         "multipler",
         "numeroval",
         "observersegu",
+        "ocho",
         "PORTAFOLIO",
         "REALIDAD",
         "rendererdos",
@@ -53,12 +56,16 @@
         "scenedos",
         "scenetres",
         "sceneuno",
+        "scrollabajo",
+        "scrollarriba",
         "scrollcontra",
         "scrolldos",
         "scrollinicio",
+        "sectionhorizontal",
         "seguactivo",
         "servicios",
         "setion",
+        "sliderho",
         "SOLUCIONES",
         "textureuno",
         "valorseguro",
