--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
         "setion",
         "sliderho",
         "SOLUCIONES",
+        "sslider",
         "textureuno",
         "valorseguro",
         "verbar",
