add section pilares

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "CARGANDO",
         "CINCO",
         "CINTA",
+        "contador",
         "contdos",
         "contdtres",
         "conten",
