--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
         "materialuno",
         "menuactivo",
         "multipler",
+        "numero",
         "numeroval",
         "observersegu",
         "ocho",
