--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "liveServer.settings.port": 5501,
     "cSpell.words": [
+        "aboutme",
         "animado",
         "bandera",
         "barramenu",
