--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,11 @@
         "numeroval",
         "observersegu",
         "ocho",
+        "parrafo",
+        "plantilla",
         "PORTAFOLIO",
+        "proyecto",
+        "proyectos",
         "REALIDAD",
         "rendererdos",
         "renderertres",
