add figura 3d plantilla

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "camerados",
         "cameratres",
         "camerauno",
+        "camerauxui",
         "capa",
         "CARGANDO",
         "CINCO",
@@ -27,17 +28,20 @@
         "CREATIVO",
         "ctive",
         "CUATRO",
+        "cubeuxui",
         "DESARROLLO",
         "entrada",
         "entradasegu",
         "figura",
         "figurados",
         "figuratres",
+        "figurauxui",
         "figureuno",
         "flotante",
         "fondo",
         "geometrydos",
         "geometryuno",
+        "geometryuxui",
         "grilla",
         "gsap",
         "HAGAMOS",
@@ -45,6 +49,7 @@
         "lista",
         "materialdos",
         "materialuno",
+        "materialuxui",
         "menuactivo",
         "multipler",
         "numero",
@@ -60,9 +65,11 @@
         "rendererdos",
         "renderertres",
         "rendereruno",
+        "rendereruxui",
         "scenedos",
         "scenetres",
         "sceneuno",
+        "sceneuxui",
         "scrollabajo",
         "scrollarriba",
         "scrollcontra",
@@ -77,7 +84,9 @@
         "sslider",
         "textureuno",
         "valorseguro",
+        "ventana",
         "verbar",
+        "vidriouxui",
         "wapp",
         "wavex"
     ]
