--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,12 +33,14 @@
         "entrada",
         "entradasegu",
         "figura",
+        "figuracuatro",
         "figurados",
         "figuratres",
         "figurauxui",
         "figureuno",
         "flotante",
         "fondo",
+        "geometrycuatro",
         "geometrydos",
         "geometryuno",
         "geometryuxui",
@@ -50,6 +52,7 @@
         "materialdos",
         "materialuno",
         "materialuxui",
+        "materialuxuidos",
         "menuactivo",
         "multipler",
         "numero",
@@ -86,8 +89,27 @@
         "valorseguro",
         "ventana",
         "verbar",
+        "vidrio",
         "vidriouxui",
+        "vidriouxuicatorce",
+        "vidriouxuiciete",
+        "vidriouxuicinco",
+        "vidriouxuicuatro",
+        "vidriouxuidies",
+        "vidriouxuidiesiocho",
+        "vidriouxuidiesiseis",
+        "vidriouxuidiesisiete",
+        "vidriouxuidoce",
+        "vidriouxuidos",
+        "vidriouxuinueve",
+        "vidriouxuiocho",
+        "vidriouxuionce",
+        "vidriouxuiquince",
+        "vidriouxuiseis",
+        "vidriouxuitrece",
+        "vidriouxuitres",
         "wapp",
-        "wavex"
+        "wavex",
+        "wireframe"
     ]
 }
