add animate figures in the section inicio

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
         "proyecto",
         "proyectos",
         "REALIDAD",
+        "rebo",
         "rendererdos",
         "renderertres",
         "rendereruno",
@@ -85,6 +86,7 @@
         "sliderho",
         "SOLUCIONES",
         "sslider",
+        "stikerlvl",
         "textureuno",
         "valorseguro",
         "ventana",
@@ -96,6 +98,7 @@
         "vidriouxuicinco",
         "vidriouxuicuatro",
         "vidriouxuidies",
+        "vidriouxuidiesinueve",
         "vidriouxuidiesiocho",
         "vidriouxuidiesiseis",
         "vidriouxuidiesisiete",
