--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,9 @@
         "barranava",
         "BIENVENIDO",
         "boton",
+        "calculoanchofin",
+        "calculoanchoinicio",
+        "cambiode",
         "camerados",
         "cameratres",
         "camerauno",
@@ -53,6 +56,7 @@
         "materialuno",
         "materialuxui",
         "materialuxuidos",
+        "mediaplantilla",
         "menuactivo",
         "multipler",
         "numero",
@@ -113,6 +117,7 @@
         "vidriouxuitres",
         "wapp",
         "wavex",
-        "wireframe"
+        "wireframe",
+        "zoomvidrio"
     ]
 }
