--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,11 +17,14 @@
         "cameratres",
         "camerauno",
         "camerauxui",
+        "canvasindex",
         "capa",
         "CARGANDO",
         "CINCO",
         "CINTA",
+        "Colorstop",
         "contador",
+        "contcanvas",
         "contdos",
         "contdtres",
         "conten",
@@ -47,6 +50,7 @@
         "geometrydos",
         "geometryuno",
         "geometryuxui",
+        "gradientlogic",
         "grilla",
         "gsap",
         "HAGAMOS",
