prueba de responsive

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "liveServer.settings.port": 5501,
     "cSpell.words": [
         "aboutme",
+        "ancho",
         "animado",
         "bandera",
         "barramenu",
@@ -16,6 +17,7 @@
         "camerados",
         "cameratres",
         "camerauno",
+        "camerauw",
         "camerauxui",
         "canvasindex",
         "capa",
@@ -23,6 +25,7 @@
         "CINCO",
         "CINTA",
         "Colorstop",
+        "columdosuxw",
         "contador",
         "contcanvas",
         "contdos",
@@ -30,6 +33,7 @@
         "conten",
         "contenedora",
         "contuno",
+        "contuw",
         "CREATIVAS",
         "CREATIVO",
         "ctive",
@@ -49,15 +53,18 @@
         "geometrycuatro",
         "geometrydos",
         "geometryuno",
+        "geometryuw",
         "geometryuxui",
         "gradientlogic",
         "grilla",
         "gsap",
         "HAGAMOS",
+        "javascripts",
         "lightuno",
         "lista",
         "materialdos",
         "materialuno",
+        "materialuw",
         "materialuxui",
         "materialuxuidos",
         "mediaplantilla",
@@ -67,6 +74,7 @@
         "numeroval",
         "observersegu",
         "ocho",
+        "pagina",
         "parrafo",
         "plantilla",
         "PORTAFOLIO",
@@ -77,10 +85,12 @@
         "rendererdos",
         "renderertres",
         "rendereruno",
+        "rendereruw",
         "rendereruxui",
         "scenedos",
         "scenetres",
         "sceneuno",
+        "sceneuw",
         "sceneuxui",
         "scrollabajo",
         "scrollarriba",
@@ -96,6 +106,7 @@
         "sslider",
         "stikerlvl",
         "textureuno",
+        "textureuw",
         "valorseguro",
         "ventana",
         "verbar",
