--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,8 @@
         "figuratres",
         "figurauxui",
         "figureuno",
+        "finalreel",
+        "finalstring",
         "flotante",
         "fondo",
         "geometrycuatro",
