add de dolor de cabeza

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "contdtres",
         "conten",
         "contenedora",
+        "contfondo",
         "contuno",
         "contuw",
         "CREATIVAS",
@@ -42,16 +43,23 @@
         "DESARROLLO",
         "entrada",
         "entradasegu",
+        "figfondo",
+        "figfondoblanco",
         "figura",
         "figuracuatro",
         "figurados",
+        "figurafondo",
         "figuratres",
         "figurauxui",
         "figureuno",
+        "finalfondo",
+        "finalfondoblanco",
         "finalreel",
         "finalstring",
         "flotante",
         "fondo",
+        "fondostring",
+        "fondostringblanco",
         "geometrycuatro",
         "geometrydos",
         "geometryuno",
@@ -78,6 +86,7 @@
         "ocho",
         "pagina",
         "parrafo",
+        "pilares",
         "plantilla",
         "PORTAFOLIO",
         "proyecto",
