--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
     "cSpell.words": [
         "aboutme",
         "ancho",
+        "animacion",
         "animado",
+        "arrs",
         "bandera",
         "barramenu",
         "barramenua",
@@ -31,8 +33,11 @@
         "contdos",
         "contdtres",
         "conten",
+        "contenedor",
         "contenedora",
         "contfondo",
+        "contpilar",
+        "contpilarstring",
         "contuno",
         "contuw",
         "CREATIVAS",
@@ -52,6 +57,7 @@
         "figuratres",
         "figurauxui",
         "figureuno",
+        "finalcontpilar",
         "finalfondo",
         "finalfondoblanco",
         "finalreel",
