ajustes animacion responsive columns

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "liveServer.settings.port": 5501,
     "cSpell.words": [
         "aboutme",
+        "altoanimate",
+        "altodecontenedor",
         "ancho",
         "animacion",
         "animado",
@@ -35,6 +37,7 @@
         "conten",
         "contenedor",
         "contenedora",
+        "contenedoranimate",
         "contfondo",
         "contpilar",
         "contpilarstring",
