add section de paleta de color

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "aboutme",
         "acerca",
+        "acercadelproyecto",
         "altoanimate",
         "altodecontenedor",
         "ancho",
@@ -70,6 +71,7 @@
         "fondo",
         "fondostring",
         "fondostringblanco",
+        "fuente",
         "geometrycuatro",
         "geometrydos",
         "geometryuno",
@@ -99,6 +101,7 @@
         "pilares",
         "plantilla",
         "PORTAFOLIO",
+        "Primera",
         "proyecto",
         "proyectos",
         "REALIDAD",
@@ -128,6 +131,8 @@
         "stikerlvl",
         "textureuno",
         "textureuw",
+        "TIPOGRAFIA",
+        "TIPOGRAFIAS",
         "valorseguro",
         "ventana",
         "verbar",
