add ajustes de responsive de imagenes y grid en fuentes - add new section de cont_img

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,7 @@
         "grilla",
         "gsap",
         "HAGAMOS",
+        "imagenes",
         "javascripts",
         "lightuno",
         "lista",
